syntax = "proto3";

package faas.v1.functions;

option go_package = "github.com/10Narratives/faas/pkg/faas/v1/;faaspb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";

import "faas/v1/tasks.proto";

//
message Function {
  string name = 1;
  string display_name = 2;
  google.protobuf.Timestamp uploaded_at = 3;
  SourceBundle source_bundle = 4;
}

//
message SourceBundle {
  string bucket = 1;
  string object_key = 2;
  uint64 size = 3;
  string sha256 = 4;
}

//
service Functions {
  //
  rpc UploadFunction(stream UploadFunctionRequest) returns (Function);

  //
  rpc ExecuteFunction(ExecuteFunctionRequest) returns (Task);

  //
  rpc GetFunction(GetFunctionRequest) returns (Function);

  //
  rpc ListFunctions(ListFunctionsRequest) returns (ListFunctionsResponse);

  //
  rpc DeleteFunction(DeleteFunctionRequest) returns (google.protobuf.Empty);
}

//
message UploadFunctionRequest {
  oneof payload {
    UploadFunctionMetadata upload_function_metadata = 1;
    UploadFunctionData upload_function_data = 2;
  }
}

message UploadFunctionMetadata {
  string function_name = 1;
  enum Format {
    FORMAT_UNSPECIFIED = 0;
    FORMAT_ZIP = 1;
    FORMAT_TAR_GZ = 2;
  }
  Format format = 3;
}

message UploadFunctionData {
  bytes data = 1;
}

message ExecuteFunctionRequest {
  string name = 1;
  string parameters = 2;
}

message GetFunctionRequest {
  string name = 1;
}

message ListFunctionsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListFunctionsResponse {
  repeated Function functions = 1;
  string next_page_token = 2;
}

message DeleteFunctionRequest {
  string name = 1;
}